[tool.poetry]
name = "rtorrent-catcher"
version = "0.1.0"
description = ""
authors = ["hruntov <hruntov@outlook.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
